# tokio-smtp

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  request.rs  response.rs  util.rs
src/fixtures/: test.eml
