[package]
name = "tokio-smtp"
description = "An SMTP library for Tokio"
version = "0.2.0"
authors = ["Stéphan Kochen <stephan@kochen.nl>"]

documentation = "https://docs.rs/tokio-smtp/"
repository = "https://github.com/stephank/tokio-smtp"

readme = "README.md"
license = "MIT"

keywords = ["smtp", "tokio", "email"]
categories = ["email"]

[badges]
travis-ci = { repository = "stephank/tokio-smtp", branch = "master" }

[dependencies]
emailaddress = "^0.4"
futures = "^0.1"
native-tls = "^0.1"
nom = "^2.1"
tokio-core = "^0.1"
tokio-proto = "^0.1"
tokio-service = "^0.1"
tokio-tls = "^0.1"
